--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* CSS added to the whole page using the universal selector. */
 * {
   margin: 0;
   padding: 0;
@@ -5,6 +6,7 @@
 
 }
 
+/* This styling removes the scroll bar */
 * ::-webkit-scrollbar {
   display: none;
 }
